[gd_scene load_steps=10 format=3 uid="uid://b7yoxeg7a8vra"]

[ext_resource type="Texture2D" uid="uid://bnftft2cg0ix8" path="res://UI/Sprites/Button.png" id="1_51ygn"]
[ext_resource type="Script" path="res://Scripts/credits.gd" id="1_wcp18"]
[ext_resource type="FontFile" uid="uid://budyiq4dx2ghj" path="res://UI/Fonts/Shred Handed.otf" id="2_ntgud"]
[ext_resource type="FontFile" uid="uid://b8isykctj5c3n" path="res://UI/Fonts/Pixeled.ttf" id="3_gy3ar"]
[ext_resource type="Texture2D" uid="uid://bw51iy6mr81br" path="res://UI/Sprites/Buttons 2.png" id="4_ad61n"]
[ext_resource type="Texture2D" uid="uid://iroiv6g80wor" path="res://UI/Sprites/Paper.png" id="5_2phen"]
[ext_resource type="AudioStream" uid="uid://bc776pmgk7py6" path="res://Music and SFX/Gun Shoot.ogg" id="6_mem4f"]
[ext_resource type="AudioStream" uid="uid://wdpvqdx6rsf5" path="res://Music and SFX/Button Hover.ogg" id="7_w430q"]
[ext_resource type="AudioStream" uid="uid://dakdvctgx60il" path="res://Music and SFX/Credits.wav" id="9_klsmv"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcp18")
tween_instensity = 1.2
tween_duration = 0.3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Credits Title" type="TextureRect" parent="CanvasLayer"]
offset_left = 322.0
offset_top = 75.0
offset_right = 505.0
offset_bottom = 162.0
texture = ExtResource("1_51ygn")

[node name="Text" type="Label" parent="CanvasLayer/Credits Title"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 172.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("2_ntgud")
theme_override_font_sizes/font_size = 71
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text2" type="Label" parent="CanvasLayer/Credits Title"]
layout_mode = 0
offset_left = -329.0
offset_top = -73.0
offset_right = 482.0
offset_bottom = 2.0
theme_override_fonts/font = ExtResource("2_ntgud")
theme_override_font_sizes/font_size = 56
text = "THANKS YOU SO MUCH FOR PLAY MY GAME !!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="CanvasLayer" groups=["buttons"]]
offset_left = 9.0
offset_top = 391.0
offset_right = 160.0
offset_bottom = 444.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.219608, 0.556863, 0.827451, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.451325, 0.224724, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 11
text = "BACK TO MENU
"
icon = ExtResource("4_ad61n")
icon_alignment = 1
expand_icon = true

[node name="Paper" type="TextureRect" parent="CanvasLayer"]
offset_left = 186.0
offset_top = 165.0
offset_right = 530.0
offset_bottom = 286.0
texture = ExtResource("5_2phen")

[node name="Label" type="Label" parent="CanvasLayer/Paper"]
layout_mode = 0
offset_left = 51.0
offset_top = 27.0
offset_right = 445.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0.223529, 0.34902, 0.517647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "GAME DESIGN AND PROGRAMMING"

[node name="Label2" type="Label" parent="CanvasLayer/Paper"]
layout_mode = 0
offset_left = 87.0
offset_top = 60.0
offset_right = 481.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "FRANCISCO LOZANO"

[node name="Paper2" type="TextureRect" parent="CanvasLayer"]
offset_left = 184.0
offset_top = 277.0
offset_right = 528.0
offset_bottom = 428.0
texture = ExtResource("5_2phen")

[node name="Label" type="Label" parent="CanvasLayer/Paper2"]
layout_mode = 0
offset_left = -33.0
offset_top = 10.0
offset_right = 361.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0.223529, 0.34902, 0.517647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "SPRITES, TILES, UI, GUI"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Paper2"]
layout_mode = 0
offset_left = 77.0
offset_top = 43.0
offset_right = 471.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "PUPKIN ASSETS 
SEETHINGS WARM (PLAYER)
MOHNIR TOHAMI
"

[node name="Paper3" type="TextureRect" parent="CanvasLayer"]
offset_left = 541.0
offset_top = 204.0
offset_right = 703.0
offset_bottom = 305.0
texture = ExtResource("5_2phen")

[node name="Label" type="Label" parent="CanvasLayer/Paper3"]
layout_mode = 0
offset_left = -107.0
offset_top = 5.0
offset_right = 287.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.223529, 0.34902, 0.517647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "SFX AND MUSIC "
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Paper3"]
layout_mode = 0
offset_left = 18.0
offset_top = 46.0
offset_right = 412.0
offset_bottom = 141.0
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "FREESOUNDS.ORG
"

[node name="Paper4" type="TextureRect" parent="CanvasLayer"]
offset_left = 545.0
offset_top = 303.0
offset_right = 707.0
offset_bottom = 404.0
texture = ExtResource("5_2phen")

[node name="Label" type="Label" parent="CanvasLayer/Paper4"]
layout_mode = 0
offset_left = -116.0
offset_top = 5.0
offset_right = 278.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.223529, 0.34902, 0.517647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "FONTS"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Paper4"]
layout_mode = 0
offset_left = 46.0
offset_top = 34.0
offset_right = 440.0
offset_bottom = 129.0
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gy3ar")
theme_override_font_sizes/font_size = 10
text = "PIXELED
SHRESD
"

[node name="SFX Buttons" type="AudioStreamPlayer2D" parent="."]
position = Vector2(374, 335)
stream = ExtResource("6_mem4f")
volume_db = -5.0
bus = &"SFX"

[node name="Buttons_Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_w430q")
volume_db = 16.0
bus = &"SFX"

[node name="Music Credits" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_klsmv")
bus = &"Music"

[connection signal="mouse_entered" from="CanvasLayer/Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
